fixing the no gap in the footer component on mobile diplay  using margin

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -65,6 +65,7 @@ footer a {
   }
 
   .permalinks > li {
+    margin: 0.5rem 0;
   }
 
   .footer__socials {
